--- a/style.css
+++ b/style.css
@@ -13,6 +13,10 @@ body {
     padding: 4% 2%;
     border-bottom: 1px solid #444444;
     position: relative;
+    transition: transform 0.5s;
+  }
+  header:hover{
+    transform: translateY(-10px);
   }
   header img {
     width: 150px;
@@ -20,6 +24,10 @@ body {
     border-radius: 50%;
     margin-bottom: 20px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    transition: transform 0.5s;
+  }
+  header img:hover{
+    transform: translateY(-10px);
   }
   header h1 {
     font-size: 2.5em;
@@ -54,7 +62,12 @@ body {
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     max-width: 800px;
+    transition: transform 0.5s;
   }
+  #about:hover{
+    transform: translateY(-10px);
+  }
+
   #about h2 {
     color: #d1ecff;
     margin-bottom: 10px;
@@ -68,6 +81,10 @@ body {
     border-radius: 10px;
     max-width: 800px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    transition: transform 0.5s;
+  }
+  #skills:hover{
+    transform: translateY(-10px);
   }
   #skills ul {
     list-style-type: none;
@@ -84,6 +101,11 @@ body {
     border: 1px solid #777777;
     border-radius: 5px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    transition: transform 0.5s;
+  }
+
+  #skills li:hover{
+    transform: translateY(-5px);
   }
   
   /* Professionalize the Experience Section */
@@ -95,11 +117,19 @@ body {
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     max-width: 800px;
+    transition: transform 0.5s;
+  }
+  #experience:hover{
+    transform: translateY(-10px);
   }
   #experience article {
     padding-bottom: 20px;
     margin-bottom: 20px;
     border-bottom: 1px solid #666666;
+    transition: transform 0.6s;
+  }
+  #experience article:hover{
+    transform: translateY(-8px);
   }
   #experience h3 {
     color: #d1ecff;
@@ -118,11 +148,19 @@ body {
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     max-width: 800px;
+    transition: transform 0.5s;
+  }
+  #education:hover{
+    transform: translateY(-10px);
   }
   #education article {
     padding-bottom: 20px;
     margin-bottom: 20px;
     border-bottom: 1px solid #666666;
+    transition: transform 0.5s;
+  }
+  #education article:hover{
+    transform: translateY(-5px);
   }
   #education h3 {
     color: #d1ecff;
